prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/expected_while.diag.txt
ERROR: expected 'while'
testData/diagnostics/compilation_errors/syntax_errors/expected_while.nut:4:2

    local x = 42
}
  ^


